@@ -46,6 +46,7 @@
   SECURITY: fdopendir allocated PAGE_SIZE instead of DIRSTREAMSIZE (Gabriel Ravier)
   add openat2 (linux-only, in unistd.h)
   add qsort_r (_GNU_SOURCE only, needed by zstd)
+  add futimens (_GNU_SOURCE only)
 
 0.34:
   move stpcpy from libcompat to lib as it is now part of POSIX (Enrico Scholz)
